welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:13: error: ':' expected but '.' found.
def tache(c.Color){
           ^FlowerPot:47: error: identifier expected but '}' found.
}
^