welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def growFlowers()={
  twoFlowers(Color.RED,Color.CYAN)
  droite()
  avance(2)
  gauche()
  oneFlower(Color.ORANGE)
  droite()
  avance(2)
  twoFlowers(Color.PINK,Color.GREEN)
  
}

def tache(c.Color){
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}
def cross(c.Color){
  setCouleurBrosse(c)
  baisseBrosse()
  avance(2)
  recule()
  gauche()
  avance()
  recule(2)
  avance()
  droite()
  leveBrosse()
}

def twoFlowers(c1:Color,c2:Color){
  cross(c1)
  tache(Color.YELLOW)
  avance(3)
  cross(c2)
  tache(Color.YELLOW)
  recule(5)
}

def oneFlower(c:Color)={
  avance(2)
  cross(c)
  tache(Color.YELLOW)
  recule(4)
}